--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
     ],
     "require": {
         "composer/installers": "^2.0",
-        "drupal/core-composer-scaffold": "11",
-        "drupal/core-project-message": "11",
-        "drupal/core-recommended": "11",
-        "drupal/core": "11",
+        "drupal/core-composer-scaffold": "^11",
+        "drupal/core-project-message": "^11",
+        "drupal/core-recommended": "^11",
+        "drupal/core": "^11",
         "drush/drush": "*"
     },
     "conflict": {
