--- a/web/themes/contrib/bootstrap/subthemes/bootstrap_subtheme/bootstrap_subtheme.info.yml
+++ b/web/themes/contrib/bootstrap/subthemes/bootstrap_subtheme/bootstrap_subtheme.info.yml
@@ -1,4 +1,4 @@
-name: Bootstrap Subtheme
+name: Bootstrap Subtheme (Portfolio 2025)
 type: theme
 description: 'Basic structure for a Bootstrap SubTheme.'
 core_version_requirement: ^10.3 || ^11
